# langchain-inni

./: .gitignore  get-pip.py  graph.py  main.py  main_test.py  prompt.md  pyproject.toml  pytest.ini  response_processor.py  thread_manager.py
configs/: __init__.py  app_config.py  data_provider_config.py  database_config.py  langfuse_config.py  llm_config.py  processor_config.py  sandbox_config.py  web_search_config.py
llm/: __init__.py
models/: messages.py  projects.py  threads.py
storage/: db.py  wrappers.py
storage/migrations/: 001_initial_schema.py
tests/: db_test.py  graph_test.py  llm_test.py  main_test.py  project_test.py  prompt_test.py  pytest.ini  sandbox_test.py  thread_test.py  tool_test.py
tools/: base_tool.py  browser_tool.py  computer_use_tool.py  data_providers_tool.py  message_tool.py  presentation_styles_config.py  sb_browser_tool.py  sb_deploy_tool.py  sb_expose_tool.py  sb_files_tool.py  sb_image_edit_tool.py  sb_presentation_outline_tool.py  sb_presentation_tool.py  sb_sheets_tool.py  sb_shell_tool.py  sb_templates_tool.py  sb_upload_file_tool.py  sb_vision_tool.py  sb_web_dev_tool.py  task_list_tool.py  tool.py  tool_manager.py  tool_registry.py  web_search_tool.py
tools/data_providers/: ActiveJobsProvider.py  AmazonProvider.py  LinkedinProvider.py  RapidDataProviderBase.py  TwitterProvider.py  YahooFinanceProvider.py  ZillowProvider.py
tools/sandbox/: sandbox.py  tool_base.py
utils/: current_date.py  files_utils.py  json_helpers.py  s3_upload_utils.py  xml_tool_parser.py
